Fixed when cards flip on mobile

--- a/style.css
+++ b/style.css
@@ -211,6 +211,9 @@ main {
 .prayer-card.flip {
     transform: rotateY(180deg);
 }
+.prayer-card.flip .back {
+    transform: rotateY(180deg);
+}
 
 .prayer-card::before {
     content: '';
